--- a/app/src/main/res/layout/activity_eth.xml
+++ b/app/src/main/res/layout/activity_eth.xml
@@ -17,6 +17,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/tv_hw_addr"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:text="@string/eth_hw_addr"
+        android:textColor="@color/blue3"
+        android:textSize="@dimen/middle1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cb_enable" />
+
+    <TextView
         android:id="@+id/tv_connect"
         android:layout_width="0dp"
         android:layout_height="60dp"
@@ -27,7 +40,7 @@
         android:textSize="@dimen/middle1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cb_enable" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_hw_addr" />
 
     <Button
         android:id="@+id/btn_get_eth"
